templates/css/styles.css
/* ... */
.favorites_img a.btnClose_img:hover {
    color: #ffa507;
}

.favorites_img a.btnEdit_img {
    display: block;
    width: 26px;
    height: 26px;
    position: absolute;
    z-index: 100;
    right: 45px;
    top: 10px;
    background: transparent;
    color: #ccc;
}
.favorites_img a.btnEdit_img:hover {
    color: #ffa507;
}

.btnUpload {
    background: #ffa507;
    /*margin: 0 auto 30px;*/
    padding: 10px 30px;
    font-size: 14.23px;
    /*text-transform: uppercase;*/
    /*min-width: 160px;*/
}
.btnUpload:hover {
    background: #000;
}
.progress-bar{
    background-color: #ffa507;
    font-weight: bold;
    font-size: 15px;
    line-height: 26px;
}
.progress{
    height: 30px;
}

/* Avatar dropdown */
.box_user_top .dropdown-toggle {
    display: inline-block;
    float: left;
}
.dropdown_avatar .dropdown-menu {
    padding: 15px;
    box-shadow: none;
    /*right: 0;*/
    top: 100%;
    left: 104px;
}
.dropdown_avatar .dropdown-menu .dropdown-item {
    color: #8c8c8c;
    display: block;
    font-size: 12px;
    padding: 5px 0;
}
.dropdown_avatar .dropdown-menu .dropdown-item:hover {
    color: #000;
    text-decoration: underline;
}
.dropdown_avatar .dropdown-menu:before {
    content: "";
    display: inline-block;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 8px 8px 8px;
    border-color: transparent transparent #ccc transparent;
    position: absolute;
    top: -8px;
    right: 0;
    left: 0;
    margin: auto;
}
.box_user_top .caret {
    position: relative;
    top: 10px;
    color: #000;
    margin-left: 5px;
}

#slider {
    -webkit-appearance: none;
    width: 100%;
    height: 15px;
    border-radius: 5px;
    background: #d3d3d3;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
    margin-top: 10px;
    max-height: 15px;
}

#slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #ffa507;
    cursor: pointer;
}

#slider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #ffa507;
    cursor: pointer;
}

input[type=range]::-ms-track {


    /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
    background: transparent;

    /*leave room for the larger thumb to overflow with a transparent border */
    border-color: transparent;
    border-width: 6px 0;

    /*remove default tick marks*/
    color: transparent;
}
input[type=range]::-ms-fill-lower {
    background: #d3d3d3;
    border-radius: 10px;
}
input[type=range]::-ms-fill-upper {
    background: #d3d3d3;
    border-radius: 10px;
}
input[type=range]::-ms-thumb {
    border: none;
    height: 25px;
    width: 25px;
    border-radius: 50%;
    background: #ffa507;
}
input[type=range]:focus::-ms-fill-lower {
    background: #d3d3d3;
}
input[type=range]:focus::-ms-fill-upper {
    background: #d3d3d3;
}

input[type=range]::-ms-tooltip {
    display: block;
}

.blur {
    -webkit-filter: blur(10px);
    -moz-filter: blur(10px);
    -o-filter: blur(10px);
    -ms-filter: blur(10px);
    filter: blur(10px);
    filter: url(blur.svg#blur);
}

label.error{
    border: none !important;
    font-size: 12px !important;
    color: red;
    font-weight: normal;
}

label label.error{
    display: block;
    padding-left: 0px;
}

.ms-options-wrap > .ms-options > ul li.selected label{
    background-color: transparent;
}

.selectAvatarForm label > input{ /* HIDE RADIO */
    visibility: hidden; /* Makes input not-clickable */
    position: absolute; /* Remove input from document flow */
}
.selectAvatarForm label > input + img{ /* IMAGE STYLES */
    cursor:pointer;
    border:2px solid transparent;
}
.selectAvatarForm label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
    border:2px solid #f00;
}


/* Slider tooltip*/
.tooltipSlider {
    position: relative;
}

.tooltipSlider .tooltipText {
    visibility: hidden;
    width: 30px;
    background-color: #ffa507;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    position: absolute;
    z-index: 1;
    bottom: 150%;
    left: 53%;
    margin-left: -60px;
    opacity: 0;
    transition: opacity 1s;
    font-size: 14px;
    font-weight: 500;
}

.tooltipSlider .tooltipText::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #ffa507 transparent transparent transparent;
}

.tooltipSlider:hover .tooltipText, .tooltipSlider:target .tooltipText {
    visibility: visible;
    opacity: 1;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    .tooltipText{
        display: none !important;
    }
}


.packages_option {
    margin: 60px 0;
}
.radio-tile-group {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
.radio-tile-group .input-container {
    position: relative;
    height: 17rem;
    width: 17rem;
    margin: 1rem;
}
.radio-tile-group .input-container .radio-button {
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    margin: 0;
    cursor: pointer;
}
.radio-tile-group .input-container .radio-tile {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    border: 2px solid #ffa507;
    border-radius: 5px;
    padding: 1rem;
    transition: -webkit-transform 300ms ease;
    transition: transform 300ms ease;
    transition: transform 300ms ease, -webkit-transform 300ms ease;
}
.radio-tile-group .input-container .icon svg {
    fill: #ffa507;
    width: 3rem;
    height: 3rem;
}
/* ... */

